--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.io" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tailwind UI</title>
+    <title>React-Tailwind UI</title>
   </head>
   <body>
     <div id="root"></div>
