zenui all pages complete and seo complete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/darklogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZENUI - The Modern Ui Library</title>
+
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="zenui, zenui library, react library, react component library, the zenui, mordern ui library, free component library, asfak ahmed, asfak the founder of zenui, rahi ahmed, bangladesh first ui library, free website template, unique website template free, free template" />
+    <meta property="description" content="ZenUI is a React and Tailwind CSS UI components library offering pre-built website templates. Simplify your development process and create beautiful, responsive websites effortlessly with Zenui." />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+
+    <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
+    <meta property="og:title" content="ZENUI LIBRARY - Free Templates & Components Library" />
+    <meta property="og:description" content="ZenUI is a React and Tailwind CSS UI components library offering pre-built website templates. Simplify your development process and create beautiful, responsive websites effortlessly with Zenui." />
+    <meta property="og:image" content="https://i.ibb.co/q01CfCL/social-image.png" />
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:site" content="zenuilibrary">
+    <meta name="twitter:title" content="ZENUI LIBRARY - Free Templates & Components Library">
+    <meta name="twitter:description" content="ZenUI is a React and Tailwind CSS UI components library offering pre-built website templates. Simplify your development process and create beautiful, responsive websites effortlessly with Zenui.">
+
+    <title>ZENUI LIBRARY - Free Templates & Components Library</title>
   </head>
   <body>
     <div id="root"></div>
