--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
     <meta name="twitter:title" content="ZENUI LIBRARY - Free Templates & Components Library">
     <meta name="twitter:description" content="ZenUI is a React and Tailwind CSS UI components library offering pre-built website templates. Simplify your development process and create beautiful, responsive websites effortlessly with Zenui.">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V0DX4Z7PRF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-V0DX4Z7PRF');
+    </script>
+
     <title>ZENUI LIBRARY - Free Templates & Components Library</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="zenuilibrary" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   </body>
 </html>
